--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.ino linguist-language=Arduino
-*.cpp linguist-language=Arduino
-*.h linguist-language=Arduino
+*.ino linguist-language=Arduino;
+*.cpp linguist-language=Arduino;
+*.h linguist-language=Arduino;
