--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-*.ino linguist-language=Arduino;
-*.cpp linguist-language=Arduino;
-*.h linguist-language=Arduino;
+*.h linguist-language=swift;
+*.cpp linguist-language=swift;
