--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.h linguist-language=swift;
-*.cpp linguist-language=swift;
-*.ino linguist-language=swift;
+*.ino linguist-language=java
+*.h linguist-language=java
+*.cpp linguist-language=java
