--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.ino linguist-language=java
-*.h linguist-language=java
-*.cpp linguist-language=java
+*.ino linguist-language=arduino
+*.h linguist-language=arduino
+*.cpp linguist-language=arduino
