--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
-*.ino linguist-language= arduino
-*.cpp linguist-language= arduino
-*.h linguist-language= arduino
+*.ino linguist-language=arduino
+*.cpp linguist-language=arduino
+*.h linguist-language=arduino
